--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -79,7 +79,7 @@
                 listItems: {
                     classes: "govuk-!-margin-top-4 govuk-!-margin-bottom-2",
                     items: [{
-                        html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.chargeUuid + '/update-offence-outcome" data-qa="update-outcome-link-'+ offence.chargeUuid +'"class="govuk-link govuk-link--no-visited-state">Update outcome</a>'
+                        html: '<a href="/person/'+ nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + offence.chargeUuid + '/update-offence-outcome?backTo=updateOffenceOutcomes" data-qa="update-outcome-link-'+ offence.chargeUuid +'"class="govuk-link govuk-link--no-visited-state">Update outcome</a>'
                     }]
                 },
                 id: offenceId,
