--- a/server/views/partials/hearingCaption.njk
+++ b/server/views/partials/hearingCaption.njk
@@ -1,5 +1,5 @@
 <span class="govuk-caption-l">
 {% if addOrEditCourtAppearance == 'add-court-appearance' %}
-  Add appearance information
+  Add hearing information
 {% endif %}
 </span>
