--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -1,17 +1,26 @@
 {% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
-{% set isRemandWarrant = courtAppearance.warrantType == 'REMAND'%}
+{% set isNonSentencingWarrant = courtAppearance.warrantType == 'NON_SENTENCING'%}
 {% set warrantOrHearing = 'Warrant' if courtAppearance.warrantType === 'SENTENCING' else 'Hearing' %}
-{% set checkAnswersRows = [
-    {
-        key: {
-            text: "Warrant type"
-        },
-        value: {
-            text: courtAppearance.warrantType | capitalize
+
+{% set checkAnswersRows = [] %}
+
+{% if courtAppearance.warrantType === 'SENTENCING' %}
+    {% set checkAnswersRows = checkAnswersRows.concat([
+        {
+            key: {
+                text: "Warrant type"
+            },
+            value: {
+                text: courtAppearance.warrantType | capitalize
+            }
         }
-    },
+    ]) %}
+{% endif %}
+
+
+{% set checkAnswersRows = checkAnswersRows.concat([
     {
         key: {
             text: "Case reference"
@@ -45,7 +54,7 @@
                     attributes: {
                         "data-qa": "edit-warrant-date-link"
                     }
-                } if courtAppearance.appearanceInformationAccepted !== true or isRemandWarrant
+                } if courtAppearance.appearanceInformationAccepted !== true or isNonSentencingWarrant
             ]
         }
     },
@@ -66,7 +75,7 @@
             ]
         }
     }
-] %}
+]) %}
 
 {% if courtAppearance.warrantType !== 'SENTENCING' %}
     {% set checkAnswersRows = checkAnswersRows.concat([
