--- a/server/views/partials/hearingDetailsLayout.njk
+++ b/server/views/partials/hearingDetailsLayout.njk
@@ -20,10 +20,10 @@
         <div class="govuk-grid-column-two-thirds">
             {% block pageContent %}{% endblock %}
         </div>
-        {% if showAppearanceDetails %}
+        {% if showHearingDetails %}
             <div class="govuk-grid-column-one-third">
                 <div class="offence-summary">
-                    <h2 class="govuk-heading-m govuk-!-margin-top-4">Appearance details</h2>
+                    <h2 class="govuk-heading-m govuk-!-margin-top-4">Hearing details</h2>
                     {{ govukSummaryList({
                         classes: "govuk-summary-list--no-border offences-summary-card-content",
                         rows: [
@@ -38,7 +38,7 @@
                                 classes: "offences-summary-card-court-details-row"
                             },
                             {
-                                key: { text: "Warrant date" },
+                                key: { text: (warrantOrHearing | capitalize) + " date" },
                                 value: { text: courtAppearance.warrantDate | formatDate},
                                 classes: "offences-summary-card-court-details-row"
                             },
@@ -49,7 +49,7 @@
                             }
                         ],
                         attributes: {
-                            'data-qa': 'appearanceDetails'
+                            'data-qa': 'hearingDetails'
                         }
                     }) }}
 
