RASS-1714 change next hearing set to next appearance set

--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -73,13 +73,13 @@
 }) %}
 
 {% set nextHearingSummaryRows = [{
-  key: { text: "Next hearing set" },
+  key: { text: "Next appearance set" },
   value: { text: "Yes" if appearance.nextHearingSelect else "No future appearance scheduled" },
   actions: {
     items: [{
-      href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-select",
+      href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-appearance-select",
       text: "Edit",
-      visuallyHiddenText: "Next hearing set",
+      visuallyHiddenText: "Next appearance set",
       classes: "govuk-link--no-visited-state"
     }]
   }
