--- a/server/views/pages/courtAppearance/next-appearance-select.njk
+++ b/server/views/pages/courtAppearance/next-appearance-select.njk
@@ -12,7 +12,7 @@
             name: "nextHearingSelect",
             fieldset: {
                 legend: {
-                text: "Has the next hearing been set?",
+                text: "Has the next appearance been set?",
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
                 }
