--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -11,7 +11,7 @@
             {% include "../../partials/nextAppearanceCaption.njk" %}
             <h1 class="govuk-heading-l">Check your answers</h1>
 
-            {% if courtAppearance.nextHearingSelect %}
+            {% if courtAppearance.nextAppearanceSelect %}
                 {{ govukSummaryList({
                     rows: [
                         {
