--- a/server/views/pages/courtAppearance/next-appearance-type.njk
+++ b/server/views/pages/courtAppearance/next-appearance-type.njk
@@ -3,16 +3,16 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {% set fieldSetHtml %}
-    <h1 class="govuk-fieldset__heading{% if currentlySetTypeDescription %} govuk-!-static-margin-bottom-3{% endif %}">{% if isAddCourtAppearance%}How will they attend the hearing?{%else%}Edit the next hearing type{%endif%}</h1>
+    <h1 class="govuk-fieldset__heading{% if currentlySetTypeDescription %} govuk-!-static-margin-bottom-3{% endif %}">{% if isAddCourtAppearance%}How will they attend the appearance?{%else%}Edit the next appearance type{%endif%}</h1>
     {% if currentlySetTypeDescription%}
     <p class="govuk-body-l govuk-!-static-margin-bottom-3" data-qa="legendParagraph">{{ currentlySetTypeDescription }}</p>
     {% endif %}
 {% endset %}
 
 {% set radiosData = {
-                    id: "nextHearingType",
-                    errorMessage: errors | findError('nextHearingType'),
-                    name: "nextHearingType",
+                    id: "nextAppearanceType",
+                    errorMessage: errors | findError('nextAppearanceType'),
+                    name: "nextAppearanceType",
                     fieldset: {
                         legend: {
                             html: fieldSetHtml,
@@ -26,29 +26,24 @@
     {%- set appearanceTypeRow = {
         value: appearanceType.appearanceTypeUuid,
         text: appearanceType.description,
-        checked: appearanceType.appearanceTypeUuid === nextHearingTypeForm.nextHearingType
+        checked: appearanceType.appearanceTypeUuid === nextAppearanceTypeForm.nextAppearanceType
     } -%}
     {{ radiosData.items.push(appearanceTypeRow) }}
 {% endfor %}
 
 
-{% set pageTitle = applicationName + " - Next hearing type" %}
+{% set pageTitle = applicationName + " - Next appearance type" %}
 {% block pageContent %}
     {{ super() }}
-    <form method="post" autocomplete="off">
+    <form method="post" autocomplete="off" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-appearance-type{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         {% include "../../partials/nextAppearanceCaption.njk" %}
         {{ govukRadios(radiosData) }}
 
-        <div class="govuk-button-group">
-            <button type="submit"
-                    class="govuk-button"
-                    data-module="govuk-button"
-                    data-qa="continue-button"
-                    formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-type{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
-                Continue
-            </button>
-        </div>
+        {{ govukButton({
+            text: "Continue",
+            attributes: {  'data-qa': 'continue-button' }
+        }) }}
     </form>
 
 {% endblock %}
